# HyperBEAM

./: .gitignore  Makefile  rebar.config
.devcontainer/: Dockerfile
c_src/: hb_beamr.c
native/hb_beamr/: hb_wasm.c
native/hb_beamr/include/: hb_wasm.h
native/wasi_nn_llama/: CMakeLists.txt
native/wasi_nn_llama/include/: wasi_nn_llama.h  wasi_nn_llamacpp.h  wasi_nn_logging.h  wasi_nn_nif.h  wasi_nn_types.h
native/wasi_nn_llama/src/: wasi_nn_llamacpp.c  wasi_nn_logging.c  wasi_nn_logging.d  wasi_nn_nif.c  wasi_nn_nif.d
src/: dev_cu.erl  dev_poda.erl  dev_router.erl  dev_wasi.erl  dev_wasi_nn.erl  dev_wasi_nn_nif.erl  dev_wasm.erl  hb_ao.erl  hb_converge.erl  hb_opts.erl  hb_test.erl
test/: aos-wasi-nn.wasm  wasi-nn.wasm  wasmedge-ggml-llama-embedding.wasm  wasmedge-ggml-qwen.wasm
